ffmpeg/tests/avio/bad_reader_lifetime.stderr
error[E0505]: cannot move out of `buf` because it is borrowed
  --> tests/avio/bad_reader_lifetime.rs:10:10
   |
6  |     let r = Reader::new(&*buf).unwrap();
   |                           --- borrow of `buf` occurs here
...
10 |     drop(buf);
   |          ^^^ move out of `buf` occurs here
11 |     drop(r);
   |          - borrow later used here
